--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "desafio-login",
+  "name": "desafio-estrategias-de-autenticacion",
   "version": "1.0.0",
-  "description": "desafio-login",
-  "type": "module",
+  "description": "desafio de estrategias de autenticacion",
   "main": "src/app.js",
+  "type": "module",
   "scripts": {
     "start": "node .",
     "dev": "nodemon ."
@@ -17,8 +17,11 @@
     "express": "^4.18.2",
     "express-handlebars": "^7.1.0",
     "express-session": "^1.17.3",
-    "mongoose": "^7.4.0",
-    "mongoose-paginate-v2": "^1.7.23",
+    "mongoose": "^7.4.1",
+    "mongoose-paginate-v2": "^1.7.31",
+    "passport": "^0.6.0",
+    "passport-github2": "^0.1.12",
+    "passport-local": "^1.0.0",
     "socket.io": "^4.7.1"
   }
 }
