--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "desafio-refactor-a-nuestro-login",
+  "name": "segunda-practica-integradora",
   "version": "1.0.0",
-  "description": "desafio refactor a nuestro login",
+  "description": "Segunda practica integradora terminada",
   "main": "src/app.js",
   "type": "module",
   "scripts": {
@@ -15,13 +15,13 @@
     "bcryptjs": "^2.4.3",
     "connect-mongo": "^5.0.0",
     "express": "^4.18.2",
-    "express-handlebars": "^7.1.0",
+    "express-handlebars": "^7.1.2",
     "express-session": "^1.17.3",
-    "mongoose": "^7.4.1",
+    "mongoose": "^7.4.2",
     "mongoose-paginate-v2": "^1.7.31",
     "passport": "^0.6.0",
     "passport-github2": "^0.1.12",
     "passport-local": "^1.0.0",
-    "socket.io": "^4.7.1"
+    "socket.io": "^4.7.2"
   }
 }
